--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
     <title>My Cv (Original)</title>
@@ -111,25 +113,25 @@
                 <div class="service">
                     <i class="icon fas fa-paint-brush"></i>
                     <h2>Design</h2>
-                    <p>We</p>
+                    <p>We pride ourselves in producing amazing designs that keeps our clients coming back</p>
                 </div>
 
                 <div class="service">
                     <i class="icon fas fa-pager"></i>
                     <h2>Build Websites</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem laudantium distinctio sint.</p>
+                    <p>We build functional websites that speak for themselves</p>
                 </div>
 
                 <div class="service">
-                    <i class="icon fab fa-android"></i>
-                    <h2>Android Apps</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem laudantium distinctio sint.</p>
+                    <i class="icon fas fa-envelope"></i>
+                    <h2>Content Creation</h2>
+                    <p>Creating amazing content that gets your readers glued to their screen</p>
                 </div>
 
                 <div class="service">
                     <i class="icon fas fa-credit-card"></i>
-                    <h2>Ui Design</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem laudantium distinctio sint.</p>
+                    <h2>Video editing</h2>
+                    <p>We edit your videos to tell exceptional stories.</p>
                 </div>
 
             </div>
@@ -142,96 +144,74 @@
             <div class="experience-content">
                 <div class="exp-col">
                     <div class="exp-ctn">
-                        <h3>20XX - 20XX</h3>
-                        <h3>Web Developer</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At expedita maiores ullam voluptatum a nulla aperiam enim eveniet adipisci ipsum.</p>
+                        <h3>2020 - Present</h3>
+                        <h3>Front-end Web Developer</h3>
+                        <p>Designed a few websites personally and with a team of developers </p>
                     </div>
 
-                    <div class="exp-ctn">
-                        <h3>20XX - 20XX</h3>
-                        <h3>Web Developer</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At expedita maiores ullam voluptatum a nulla aperiam enim eveniet adipisci ipsum.</p>
-                    </div>
-
-                    <div class="exp-ctn">
-                        <h3>20XX - 20XX</h3>
-                        <h3>Web Developer</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At expedita maiores ullam voluptatum a nulla aperiam enim eveniet adipisci ipsum.</p>
-                    </div>
                 </div>
 
                 <div class="exp-col">
                     <div class="exp-ctn">
-                        <h3>20XX - 20XX</h3>
-                        <h3>Web Developer</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At expedita maiores ullam voluptatum a nulla aperiam enim eveniet adipisci ipsum.</p>
+                        <h3>2014 - present</h3>
+                        <h3>Graphics designer</h3>
+                        <p>Designed a few flyers, logo, business card for clients.</p>
                     </div>
 
-                    <div class="exp-ctn">
-                        <h3>20XX - 20XX</h3>
-                        <h3>Web Developer</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At expedita maiores ullam voluptatum a nulla aperiam enim eveniet adipisci ipsum.</p>
-                    </div>
-
-                    <div class="exp-ctn">
-                        <h3>20XX - 20XX</h3>
-                        <h3>Web Developer</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At expedita maiores ullam voluptatum a nulla aperiam enim eveniet adipisci ipsum.</p>
-                    </div>
                 </div>
             </div>
         </div>
     </section>
-<!-- --------------WORKS-------------- -->
+<!-- --------------PROJECTS-------------- -->
     <section class="projects dark" id="works">
         <div class="inner-width">
             <h1 class="section-title">Projects</h1>
             <div class="projects-info">
                 <div class="project">
-                    <img src="images/Projects/Project-1.jpg" alt="img1">
+                    <img src="images/Projects/portfolio 1.jpg" alt="img1">
                     <div class="project-info">
-                        <h3>Project Title</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                        <h3>Portfolio website</h3>
+                        <p>A front-end reponsive portfolio landing page</p>
                     </div>
                 </div>
 
                 <div class="project">
-                    <img src="images/Projects/Project-2.jpg" alt="img2">
+                    <img src="images/Projects/portfolio2.jpg" alt="img2">
                     <div class="project-info">
-                        <h3>Project Title</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                        <h3>Banner design</h3>
+                        <p>A creative banner design that speaks a thousand words  </p>
                     </div>
                 </div>
 
                 <div class="project">
-                    <img src="images/Projects/Project-3.jpg" alt="img3">
+                    <img src="images/Projects/portfolio3.png" alt="img3">
                     <div class="project-info">
-                        <h3>Project Title</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                        <h3>3d window mockup</h3>
+                        <p>A mockup wall advert for a company inclusive of logo design.</p>
                     </div>
                 </div>
 
                 <div class="project">
-                    <img src="images/Projects/Project-4.jpg" alt="img4">
+                    <img src="images/Projects/portfolio4.png" alt="img4">
                     <div class="project-info">
-                        <h3>Project Title</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                        <h3>Flyer Design</h3>
+                        <p>An e-flyer event sample.</p>
                     </div>
                 </div>
 
                 <div class="project">
-                    <img src="images/Projects/Project-5.jpg" alt="img5">
+                    <img src="images/Projects/portfolio5.jpg" alt="img5">
                     <div class="project-info">
-                        <h3>Project Title</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                        <h3>Logo design</h3>
+                        <p>An organization logo.</p>
                     </div>
                 </div>
 
                 <div class="project">
-                    <img src="images/Projects/Project-6.jpg" alt="img6">
+                    <img src="images/Projects/portfolio6.jpg" alt="img6">
                     <div class="project-info">
-                        <h3>Project Title</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                        <h3>Business card design</h3>
+                        <p>A mockup business card</p>
                     </div>
                 </div>
             </div>
