--- a/index.html
+++ b/index.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer"
+    />
+    <script src="https://kit.fontawesome.com/b5610d69c4.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <title>My Cv (Original)</title>
 </head>
+
 <body>
-<!-- --------------Nav-Bar-------------- -->
+    <!-- --------------Nav-Bar-------------- -->
     <header class="nav-bar">
         <div class="inner-width">
-            <a href="#home" class="logo"><h1>Port<span>Folio</span></h1></a>
+            <a href="#home" class="logo">
+                <h1>Port<span>Folio</span></h1>
+            </a>
             <div class="toggler">
                 <div>
                     <span></span>
@@ -33,24 +39,24 @@
             </div>
         </div>
     </header>
-<!-- --------------HOME-------------- -->
+    <!-- --------------HOME-------------- -->
     <section class="home" id="home">
         <div class="inner-width">
             <div class="home-content">
-                <div class="main--img"><img src="images/ty.jpeg" alt=""></div>
+                <div class="main--img"><img src="images/toyin.JPG" alt=""></div>
                 <h1>Hi! I'm</h1>
                 <div class="icon">
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="https://github.com/Bethanhelen"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://twitter.com/bethanhelen8"><i class="fa-brands fa-square-twitter"></i></a>
                 </div>
                 <div class="contact">
                     <a href="#contact">Contact me</a>
-                    <a href="#">Download CV</a>
+                    <a href="https://docs.google.com/document/d/1-Q7OXd0qIQ8dbFWDT9OQqguyL7UTCib2cf-4b9TY-CU/edit?usp=sharing">Download CV</a>
                 </div>
             </div>
         </div>
     </section>
-<!-- --------------SKILLS-------------- -->
+    <!-- --------------SKILLS-------------- -->
     <section class="skills-content" id="about">
         <div class="inner-width">
             <h1 class="section-title">Skills</h1>
@@ -105,7 +111,7 @@
             </div>
         </div>
     </section>
-<!-- --------------SERVICES-------------- -->
+    <!-- --------------SERVICES-------------- -->
     <section class="services dark" id="services">
         <div class="inner-width">
             <h1 class="section-title">Services</h1>
@@ -137,11 +143,20 @@
             </div>
         </div>
     </section>
-<!-- --------------EXPERIENCE-------------- -->
+    <!-- --------------EXPERIENCE-------------- -->
     <section class="experience" id="experience">
         <div class="inner-width">
             <h1 class="section-title">Professional Experience</h1>
             <div class="experience-content">
+                <div class="exp-col">
+                    <div class="exp-ctn">
+                        <h3>2022 - Present</h3>
+                        <h3>Video Creator</h3>
+                        <p>Birthday video creation for celebrants monthly </p>
+                    </div>
+
+                </div>
+
                 <div class="exp-col">
                     <div class="exp-ctn">
                         <h3>2020 - Present</h3>
@@ -162,7 +177,7 @@
             </div>
         </div>
     </section>
-<!-- --------------PROJECTS-------------- -->
+    <!-- --------------PROJECTS-------------- -->
     <section class="projects dark" id="works">
         <div class="inner-width">
             <h1 class="section-title">Projects</h1>
@@ -179,7 +194,7 @@
                     <img src="images/Projects/portfolio2.jpg" alt="img2">
                     <div class="project-info">
                         <h3>Banner design</h3>
-                        <p>A creative banner design that speaks a thousand words  </p>
+                        <p>A creative banner design that speaks a thousand words </p>
                     </div>
                 </div>
 
@@ -217,7 +232,7 @@
             </div>
         </div>
     </section>
-<!-- --------------CONTACT-------------- -->
+    <!-- --------------CONTACT-------------- -->
     <section class="contact" id="contact">
         <div class="inner-width">
             <h1 class="section-title">Contact</h1>
@@ -234,24 +249,25 @@
 
                 <div class="item">
                     <i class="icon fas fa-map-marker-alt"></i>
-                    <p>Lagos,Nigeria</p>
+                    <p>Lagos, Ogun, Nigeria</p>
                 </div>
             </div>
 
         </div>
     </section>
-<!-- --------------FOOTER-------------- -->
+    <!-- --------------FOOTER-------------- -->
     <footer>
         <div class="inner-width">
             <div class="copyright">
                 &copy; 2022 | Created & Designed By <a href="#">Bethan-Helen</a>
-              </div>
-              <div class="icon">
-                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
+            </div>
+            <div class="icon">
+                <a href="https://github.com/Bethanhelen"><i class="fa-brands fa-github"></i></a>
+                <a href="https://twitter.com/bethanhelen8"><i class="fa-brands fa-square-twitter"></i></a>
             </div>
         </div>
     </footer>
     <script src="app.js"></script>
 </body>
+
 </html>
